--- a/css/photographer.css
+++ b/css/photographer.css
@@ -4,7 +4,7 @@
 
 .photograph-header {
     background-color: #FAFAFA;
-    height: 300px;
+    height: 0px;
     margin: 0 100px;
 }
 
@@ -19,6 +19,9 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+    margin-left: 30rem;
+    position: absolute;
+    margin-top: -10rem;
 }
 
 .modal {
@@ -31,6 +34,7 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+    padding-bottom: 7rem;
 }
 
 .modal header {
@@ -43,9 +47,10 @@
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 40px;
     font-weight: normal;
     text-align: center;
+    margin-top: -4rem;
 }
 
 form {
@@ -80,12 +85,16 @@ form input {
     justify-content: center;
     align-items: center;
     width: 33%;
+    flex-direction: column;
+    margin-top: -8rem;
 }
 .photograph-info img{
     border-radius: 50%;
     width: 200px;
     height: 200px;
+    margin-left: 10px;
     object-fit: cover;
+    margin-right: -120rem;
 }
 
 .mediaDisplay{
@@ -141,3 +150,80 @@ form input {
     color: #5d0b0b;
     font-weight: lighter;
 }
+
+#photographeName {
+    margin-left: 6rem;
+    font-size: 44px;
+}
+
+img#photographeImage {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: 10px;
+    object-fit: cover;
+    margin-left: 75rem;
+}
+
+p#photographeLocalisation {
+    margin-top: -20px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 18px;
+    margin-left: -7rem;
+}
+
+p#deroulantDescription {
+    margin-left: -220px;
+}
+
+p#photographeSlogan {
+    margin-left: 15px;
+    margin-top: -1rem;
+}
+
+select#photographer-dropdown {
+    margin-top: -2rem;
+    background-color: #901c1c;
+    color: #ffffff;
+    font-size: 16px;
+    text-align: left;
+    padding: 14px;
+    width: 170px;
+    margin-left: 3rem;
+    margin-top: -3rem;
+}
+
+input.message {
+    padding-bottom: 5rem;
+}
+
+div#contact_modal {
+    margin-top: -380rem;
+    position: relative;
+}
+
+.contact_button {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    padding: 11px;
+    width: 170px;
+    height: 70px;
+    border: none;
+    background-color: #901C1C;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    margin-top: 36rem;
+}
+.modal {
+    border-radius: 5px;
+    background-color: #DB8876;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 35px;
+    margin: auto;
+  }
